[package]
name = "do-on-rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
#serde-wasm-bindgen = { version = "0.6.5" }

worker = { version = "^0.7.2" }
worker-macros = { version = "^0.7.2" }

[dev-dependencies]
worker-build = { version = "0.7.2" }

[features]
"_rpc_emul" = []     # marker for code that can be removed, if 'worker' allows direct RPC from Worker -> DO (does not)
"default" = ["_rpc_emul"]
