[package]
name = "durable-objects-on-rust"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { version = "^0.8.8", default-features = false, features = ["json"] } # akin to 'workers-rs' axum example
axum-macros = "^0.5.0"

serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "1.0" }
time = { version = "^0.3.46", features = ["formatting", "parsing"] }
tower-service = { version = "^0.3.3" }

worker = { version = "^0.7.4", features = ["axum", "http"] }
worker-macros = { version = "^0.7.4", features = ["http"] } # in 'workers-rs' 'examples/axum/Cargo.toml'; is it needed?

[features]
"_hello_api" = []
"default" = [
    #"_hello_api"
]
